fixtures/invalid/bad-table-row.lmk
@table columns="Feature|Status"
Only one cell
